@@ -86,6 +86,7 @@ public:
     void setMode(Mode mode);
     void setDeiconifyMode(DeiconifyMode mode);
     void setWheelMode(WheelMode mode);
+    void parentMoved() { m_icon_container.parentMoved(); }
 
     unsigned int width() const;
     unsigned int height() const;
