@@ -782,8 +782,14 @@ void Toolbar::toggleHidden() {
     m_hidden = ! m_hidden;
     if (isHidden())
         frame.window.move(frame.x_hidden, frame.y_hidden);
-    else
+    else {
         frame.window.move(frame.x, frame.y);
+        ItemList::iterator item_it = m_item_list.begin();
+        ItemList::iterator item_it_end = m_item_list.end();
+        for (item_it = m_item_list.begin(); item_it != item_it_end; ++item_it) {
+            (*item_it)->parentMoved();
+        }
+    }
 
 }
 
